--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,10 @@ max-height: 50px;
     
     color: #d9d7d7;
 }
-#textarea {
+#userinput {
     padding: 30px 50px 0px 50px;
     -webkit-appearance: textarea;
-  
+  width: 100%;
     height: 300px;
     background-color: white;
     color: #989898;
@@ -50,9 +50,21 @@ max-height: 50px;
 
 
 
-text-transform: uppercase;
+
 }
-#textarea:focus{
+button:active {
+    outline: none;
+    border: none;
+    }
+    
+    button:focus {outline:0;}
+.fon button :active
+{
+    transform: translateY(10px);
+    outline: none!important;
+    border: none;
+}
+#userinput:focus{
  
     outline: none;
     
@@ -86,7 +98,7 @@ font-family: "Proxima Nova";
 
 
 }
-.content .buttons  button:focus
+.content .buttons  button:active
 {
     outline: none!important;
     border: 2px solid #c5a0f7!important;
@@ -94,6 +106,7 @@ font-family: "Proxima Nova";
 .selected {
     /* Style for "Rectangle" */
   background-color: #c5a0f7!important;
+  outline: none;
 }
 footer{
     background-color: #0a1948;
